--- a/portfolio.html
+++ b/portfolio.html
@@ -220,6 +220,18 @@
         <li class="footer-action-item"><a class="footer-action-link"   href=""><svg class="footer-team-icon">
           <use href="./images/icon/symbol-defs.svg#icon-linkedin"></use></svg></a></li></ul></div>
 </div>
+<div class="subscription-conteiner">
+  <h3 class="footer-subtitle">Підпишіться на розсилку</h3>
+  <form class="subscription-form">
+    <div class="subscription">
+      <label for="mail"></label>
+      <input type="email" name="mail" id="mail" class="subscription-mail" placeholder="E-mail">
+    </div>
+      <button type="submit" class="btn-subscription">Підписатися
+      <svg class="icon-svg" width="24px" height="24px"><use href="./images/icon/symbol-defs.svg#icon-icon-send"></use></svg>
+      </button>
+    </form>
+</div>    
  </div>
 </footer>
   </body>
