--- a/index.html
+++ b/index.html
@@ -63,7 +63,60 @@
           <div class="modal">
           <button class="modal-button" type="button"  data-modal-close>
             <svg class="modal-svg" width="30px" height="30px"><use href="./images/icon/symbol-defs.svg#icon-close"></use></svg>  
-          </button></div>
+          </button>
+          <form class="modal-registr-form">
+            <strong class="form-title">Залиште свої дані, ми вам передзвонимо</strong>
+            
+            <div class="register-form-group" role="group">
+
+              <label class="form-label">
+                <span class="form-label-text">Ім'я</span>
+                <input class="form-input" type="text" name="name">
+                <svg width="18" height="18" class="form-svg">
+                  <use href="./images/icon/person.svg"></use>
+                </svg>
+              </label>
+
+
+              <label class="form-label">
+                <span class="form-label-text">Телефон</span>
+                <input class="form-input" type="text" name="name">
+                <svg width="18" height="18" class="form-svg">
+                  <use href="./images/icon/symbol-defs.svg#phone"></use>
+                </svg>
+              </label>
+
+
+              <label class="form-label">
+                <span class="form-label-text">Пошта</span>
+                <input class="form-input" type="email" name="name">
+                <svg width="18" height="18" class="form-svg">
+                  <use href="./images/icon/symbol-defs.svg#email"></use>
+                </svg>
+              </label>
+
+
+              <label class="form-label">
+                <span class="form-label-text">Коментар</span>
+                <textarea class="modal-comment" name="comment" rows="5" placeholder="Введіть текст"></textarea>
+              </label>
+            </div>
+
+
+            <label class="form-agreement hidden">
+              <input type="checkbox" name="box" class="input-agreement visually-hidden">
+              <span class="icon-check"></span>
+              <span class="text-agreement">Погоджуюся з розсилкою та приймаю <a href="" class="link-agreement">Умови договору</a></span> 
+            </label>
+
+
+            <button type="submit" class="group-btn">Відправити</button>
+
+
+          </div>
+        </form>
+
+        </div>
         </div>
 
       </section>
@@ -297,7 +350,21 @@
             <li class="footer-action-item"><a class="footer-action-link"   href=""><svg class="footer-team-icon">
               <use href="./images/icon/symbol-defs.svg#icon-linkedin"></use></svg></a></li></ul>
     </div>
+    <div class="subscription-conteiner">
+      <h3 class="footer-subtitle">Підпишіться на розсилку</h3>
+      <form class="subscription-form">
+        <div class="subscription">
+          <label for="mail"></label>
+          <input type="email" name="mail" id="mail" class="subscription-mail" placeholder="E-mail">
+        </div>
+          <button type="submit" class="btn-subscription">          Підписатися
+          <svg class="icon-svg" width="24px" height="24px"><use href="./images/icon/symbol-defs.svg#icon-icon-send"></use></svg>
+          </button>
+        </form>
+  </div>    
      </div>
+     
+
     </footer>
     <script src="./js/modal.js"></script>
   </body>
