--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
       <section class="hero">
         <div class="container section-hero">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+
           <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
         </div>
+
         <div class="backdrop is-hidden" data-modal> 
           <div class="modal">
           <button class="modal-button" type="button"  data-modal-close>
@@ -73,7 +75,7 @@
                 <span class="form-label-text">Ім'я</span>
                 <input class="form-input" type="text" name="name">
                 <svg width="18" height="18" class="form-svg">
-                  <use href="./images/icon/person.svg"></use>
+                  <use href="./images/icon/symbol-defs.svg#icon-person"></use>
                 </svg>
               </label>
 
@@ -82,7 +84,7 @@
                 <span class="form-label-text">Телефон</span>
                 <input class="form-input" type="text" name="name">
                 <svg width="18" height="18" class="form-svg">
-                  <use href="./images/icon/symbol-defs.svg#phone"></use>
+                  <use href="./images/icon/symbol-defs.svg#icon-phone"></use>
                 </svg>
               </label>
 
@@ -91,7 +93,7 @@
                 <span class="form-label-text">Пошта</span>
                 <input class="form-input" type="email" name="name">
                 <svg width="18" height="18" class="form-svg">
-                  <use href="./images/icon/symbol-defs.svg#email"></use>
+                  <use href="./images/icon/symbol-defs.svg#icon-email"></use>
                 </svg>
               </label>
 
